--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,12 +26,26 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.add.type.headers=false
 
-# Observability / Monitoring
-management.endpoints.web.exposure.include=health,metrics,prometheus
-
 # Logging configuration
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.com.example.personnel_management_service=DEBUG
 logging.level.org.apache.kafka=DEBUG
 logging.level.org.springframework.kafka=DEBUG
+
+# Expose desired actuator endpoints
+management.endpoints.web.exposure.include=health,metrics,prometheus,info
+management.endpoint.health.show-details=always
+
+# Prometheus endpoint
+management.metrics.export.prometheus.enabled=true
+
+# OpenTelemetry OTLP exporter
+otel.traces.exporter=otlp
+otel.metrics.exporter=otlp
+otel.logs.exporter=none
+otel.exporter.otlp.endpoint=http://localhost:4317
+otel.resource.attributes=service.name=personnel-management-service
+
+# Optionally adjust sampling (default is 1.0 == 100%)
+otel.traces.sampler=always_on
