Added OpenAPI and swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,15 @@ otel.resource.attributes=service.name=personnel-management-service
 
 # Optionally adjust sampling (default is 1.0 == 100%)
 otel.traces.sampler=always_on
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+springdoc.default-produces-media-type=application/json
+springdoc.default-consumes-media-type=application/json
+
+# Optional metadata
+springdoc.info.title=Personnel Management Service API
+springdoc.info.version=1.0
+springdoc.info.description=API documentation for managing departments, employees, and managers.
+
